--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <script src="vanilla-tilt.min.js"></script>
+    <script type="module" src="/src/main.jsx"></script>s
   </body>
 </html>
